@@ -267,8 +267,9 @@ C<< <% %> >> tags that span multiple lines are ignored.
 
 =item *
 
-A C<< %-line >> or C<< <% %> >> tag or any line inside a C<< <%perl> >> section
-will never be split up into multiple lines regardless of how long it is.
+The line structure of C<< %-lines >>, C<< <% %> >> tags, and C<< <%perl> >>
+blocks will not be altered; i.e. multiple lines will not be merged and single
+lines will not be split, regardless of their length.
 
 =back
 
